--- a/testtechnique/static/css/testetechnique.css
+++ b/testtechnique/static/css/testetechnique.css
@@ -1,19 +1,46 @@
 #image {display: inline-block ;
+    text-align: left;
     padding-top: 50px;
-    margin: auto}
+    margin: 10px}
 
 #couleur { text-align: center ;
+    display: inline-block;
+    width: 450px;
     /*background-color: #664d03;*/
-    /*padding :20px*/
+    padding-left: 40px;
+    padding-bottom  :40px ;
+    padding-top  :20px
+}
+#droite {
+    text-align: right;
+    position: relative;
+    left: 50px;
+    /*width: 49%;*/
 }
 
+#price{
+    position: relative;
+    bottom: 45px;
+
+    border: 0.5rem solid;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    border-color: black;
+    text-align: center;
+    width: 40px;
+    display: none;
+}
 #titre_produit{
     text-align: center;
     padding-top: 60px;
-    padding-bottom: 75px;
+    padding-bottom: 10px;
+    padding-right: 5px;
     margin: auto;
+
 }
-#bouton_bleu {
+#bouton_bleu_presser {
     display:none;
 }
 #bouton_rouge_presser {
@@ -36,30 +63,67 @@
     display :none ;
 }
 
+#lorem{
+    padding: 50px;
+}
 
+#taille {
+    display: block;
+    disabled : true;
+    width: 100%;
 
+}
+#peut_commander {
+    display : inline ;
+}
+#peut_pas_commander {
+    display : inline ;
+}
+#command{
+    text-align: center;
+}
 
-/*pas ok  la suite */
-/*#blue {*/
-/*    filter: ;*/
-/*}*/
-/*#img_blue {*/
-/*    display :inline ;*/
-/*}*/
-/*body{*/
-/*    background-color: #0dcaf0;*/
-/*}*/
+button{
+    border: 0.5rem solid;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    padding: 2%;
+    text-align: center;
+    width: 80px;
+    display: inline;
 
-/*.btn-check {background-color: #0f5132}*/
+}
+#teste{
+    font-size: 30px;
+    border: 0.5rem solid;
+    border-color: #63c68d;
+    border-radius: 30px;
+    margin-bottom: 15px;
+    padding: 2%;
+    background-color: #64c88d;
+    text-align: center;
+    width: 300px;
+    display: none;
+    color: white;
 
-/*!*#red { color: #fd5758 ;*!*/
-/*!*    margin :40px 40px 20px ;*!*/
-/*!*   }*!*/
-/*#green { color: #64c88d*/
-/*}*/
-/*#yellow { color: #fde180*/
-/*}*/
-/*#couleur { text-align: center ;*/
-/*background-color: #664d03;*/
-/*}*/
+}
+#teste2 {
+    font-size: 30px;
+    border: 0.5rem solid;
+    border-color: #7e7e7c;
+    border-radius: 30px;
+    margin-bottom: 15px;
+    padding: 2%;
+    background-color: #7e7e7c;
+    text-align: center;
+    width: 300px;
+    display: inline;
+    color: white;
+
+}
+#lorem{
+    margin: 30px;
+}
+body {font-family: Popins ;}
+
 
