--- a/testtechnique/templates/index.html
+++ b/testtechnique/templates/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/testetechnique.css" rel="stylesheet">
-    <script src="../static/js/script.js"></script>
+    <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="static/css/testetechnique.css" rel="stylesheet">
+    <script src="static/js/script.js"></script>
     <title>Document</title>
 </head>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md " >
                 <div class="row" id="image">
-                    <img src="../assets/shoes-blue.png" alt="image de chaussure bleue " id="img_blue">
-                    <img src="../assets/shoes-yellow.png" alt="image de chaussure jaune " id="img_yellow">
-                    <img src="../assets/shoes-red.png" alt="image de chaussure rouge " id="img_red">
-                    <img src="../assets/shoes-green.png" alt="image de chaussure verte" id="img_green">
+                    <img src="assets/shoes-blue.png" alt="image de chaussure bleue " id="img_blue">
+                    <img src="assets/shoes-yellow.png" alt="image de chaussure jaune " id="img_yellow">
+                    <img src="assets/shoes-red.png" alt="image de chaussure rouge " id="img_red">
+                    <img src="assets/shoes-green.png" alt="image de chaussure verte" id="img_green">
                 </div>
             </div>
             <div class="col-sm-12 col-md" id="droite">
@@ -26,19 +26,19 @@
                 </div>
                     <div class="row-2" id="couleur">
                         <label>
-                            <img src="../assets/bouton_bleu.png" alt="image bouton bleu"  id="bouton_bleu" onclick="color_bleu()"/>
-                            <img src="../assets/bouton_pressed_bleu.PNG"  alt="image bouton bleu presser" id="bouton_bleu_presser" />
+                            <img src="assets/bouton_bleu.png" alt="image bouton bleu"  id="bouton_bleu" onclick="color_bleu()"/>
+                            <img src="assets/bouton_pressed_bleu.PNG"  alt="image bouton bleu presser" id="bouton_bleu_presser" />
                         </label>
                         <label>
-                            <img src="../assets/bouton_rouge.png" alt="image bouton rouge" id="bouton_rouge" onclick="color_rouge()"/>
-                            <img src="../assets/bouton_pressed_rouge.png" alt="image bouton rouge presser" id="bouton_rouge_presser"/>
+                            <img src="assets/bouton_rouge.png" alt="image bouton rouge" id="bouton_rouge" onclick="color_rouge()"/>
+                            <img src="assets/bouton_pressed_rouge.png" alt="image bouton rouge presser" id="bouton_rouge_presser"/>
                         </label>
                         <label>
-                            <img src="../assets/bouton_jaune.png" alt="image bouton jaune" id="bouton_jaune" onclick="color_jaune()"/>
-                            <img src="../assets/bouton_pressed_jaune.PNG" alt="image bouton jaune presser" id="bouton_jaune_presser"/></label>
+                            <img src="assets/bouton_jaune.png" alt="image bouton jaune" id="bouton_jaune" onclick="color_jaune()"/>
+                            <img src="assets/bouton_pressed_jaune.PNG" alt="image bouton jaune presser" id="bouton_jaune_presser"/></label>
                         <label>
-                            <img src="../assets/bouton_vert.png" alt="image bouton vert" id="bouton_vert" onclick="color_vert()"/>
-                            <img src="../assets/bouton_pressed_vert.png" alt="image bouton vert presser" id="bouton_vert_presser"/>
+                            <img src="assets/bouton_vert.png" alt="image bouton vert" id="bouton_vert" onclick="color_vert()"/>
+                            <img src="assets/bouton_pressed_vert.png" alt="image bouton vert presser" id="bouton_vert_presser"/>
                         </label>
                     </div>
 
